--- a/index.html
+++ b/index.html
@@ -222,10 +222,9 @@
     <div class="contact-text">
         <h2>Contact <span>Me</span></h2>
         <h4>Let's work together</h4>
-        <p>Lorem ipsum dolor sit amet consectur adipisicing elit. Nisi, in
-            veniam ab voluptatum maxime minima voluplate debits corporis?
-            Reprehenderit quasi illum nulla ea laboriosam delectus quis?
-            Tenetur pariatur odio autem?</p>
+        <p>Let's work together and tackle this challenge as a team two heads are better than one!
+            By collaborating, we can bring fresh ideas and drive success faster.
+             make this project even better together!</p>
             <div class="contact-list">
                 <li><i class='bx bx-send' style='color:rgb(4, 251, 86)'  ></i> parama8148497159@gmail.com</li>
                 <li><i class='bx bxs-phone-call' style='color:rgb(4, 251, 86)'  ></i> 8148497159</li>
